<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.landi.trainingdemo.MainActivity">

    <EditText
        android:id="@+id/id_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/file_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_save"
        app:layout_constraintStart_toStartOf="@+id/id_edit"
        app:layout_constraintTop_toBottomOf="@+id/id_edit" />

    <Button
        android:id="@+id/id_btn_getinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_getInfo"
        app:layout_constraintStart_toStartOf="@+id/id_btn_save"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_save" />
</android.support.constraint.ConstraintLayout>
